--- a/style.css
+++ b/style.css
@@ -952,8 +952,14 @@ h2::after {
   .profile-pic {
     width: 140px;
     height: 140px;
+    
   }
-
+.hero-btn {
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+    width: 100%;
+    margin-bottom: -500px;
+  }
 
   .card {
     padding: 1rem;
