--- a/style.css
+++ b/style.css
@@ -652,7 +652,7 @@ h2::after {
   font-size: 1.5rem;
   box-shadow: 0 4px 12px var(--shadow);
   transition: all 0.3s ease;
-  z-index: 1000; /* Ensure it's above other elements */
+  z-index: 99999; /* Ensure it's above other elements */
   opacity: 0.9;
 }
 
@@ -661,6 +661,12 @@ h2::after {
   opacity: 1;
   transform: scale(1.2) rotate(360deg);
 }
+
+footer {
+  position: relative;
+  z-index: 1; /* Lower than the scroll-to-top button */
+}
+
 
 /* Animations */
 @keyframes slideDown {
@@ -921,24 +927,9 @@ h2::after {
 
 
 @media (max-width: 375px) {
-  .container {
-    padding: 0.5rem;
-    max-width: 100%;
-  }
 
- .nav-container
-  {
-    width: 100%;
-  }
-  .navbar ul {
-    flex-direction:row;
-    gap: 0.9rem;
-  }
 
-.navbar a {
-  font-size: 0.9rem;
-}
-  .hero-title {
+    .hero-title {
     font-size: 1.7rem;
     margin-top: 290px;
   }
@@ -949,16 +940,11 @@ h2::after {
 
   }
 
-  .profile-pic {
-    width: 140px;
-    height: 140px;
-    
-  }
+
 .hero-btn {
     font-size: 0.9rem;
     padding: 0.5rem 1rem;
     width: 100%;
-    margin-bottom: -500px;
   }
 
   .card {
@@ -980,7 +966,7 @@ h2::after {
   }
 
   h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .contact-info
@@ -994,20 +980,14 @@ h2::after {
   }
 
   .card h3 {
-    font-size: 1rem; 
+    font-size: 1.5rem; 
 }
 
 .about-text {
-  height: 900px;
+  height: 1100px;
   font-size: 1.2rem;
   }
 
-  .resume-button {
-    font-size: 0.9rem;
-    padding: 0.5rem 1rem;
-    margin-top: 40px;
-    margin-bottom: 60px;
-  }
   
 
 }
@@ -1015,11 +995,34 @@ h2::after {
 
 @media (max-width: 412px) {
 
-  .navbar
-  {
-    position: relative;
+  .navbar {
+  position: fixed;
+  width: 100%;
+  background: rgba(237, 230, 230, 0.391);
+  backdrop-filter: blur(12px);
+  padding: 1.2rem 0;
+  z-index: 100;
+  box-shadow: 0 2px 4px var(--shadow);
+  animation: slideDown 0.5s ease-out;
+}
+
+  .navbar.scrolled {
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
 
+ .nav-container
+  {
+    width: 100%;
+  }
+  .navbar ul {
+    flex-direction:row;
+    gap: 0.9rem;
+  }
+
+.navbar a {
+  font-size: 0.9rem;
+}
   .section
   {
     max-width: 100%;
@@ -1047,8 +1050,10 @@ h2::after {
 
   .profile-pic {
     width: 140px;
-    height: 140px;
-    margin-top: -3rem;    /* Centers vertically, no horizontal offset */
+    height: 160px;
+    margin-top: 0.3rem;    /* Centers vertically, no horizontal offset */
+    border-radius: 50%; /* 50% is standard for perfect circles */
+    border: 4px solid #fff;
   }
 
   .contact-info {
