--- a/style.css
+++ b/style.css
@@ -925,6 +925,16 @@ footer {
   }
 }
 
+.f1 {
+  font-size: 25px;
+  margin: 0;
+}
+
+.f2 {
+  font-size: 20px;
+  margin: 5px 0 10px;
+}
+
 
 @media (max-width: 375px) {
 
@@ -943,7 +953,7 @@ footer {
 
 .hero-btn {
     font-size: 0.7rem;
-    padding: 0.5rem 1rem;
+    padding: 0.6rem 0.9rem;
     width: 100%;
   }
 
@@ -996,10 +1006,19 @@ footer {
     padding-bottom: 2rem;
   }
 
+  .f1 {
+    font-size: 18px !important;
+  }
+
+  .f2 {
+    font-size: 14px !important;
+  }
+
 }
 
 
 @media (max-width: 412px) {
+
 
 
 
