--- a/style.css
+++ b/style.css
@@ -1069,10 +1069,10 @@ footer {
     margin: 1rem 0;    /* Positive margin for natural spacing */
   }
 
-  .hero-btn {
-    font-size: 0.9rem;
-    margin-top: 0.1rem;    /* Adds space around the button */
-    margin-bottom: 3rem;
+.hero-btn {
+    font-size: 0.7rem;
+    padding: 0.6rem 0.9rem;
+    width: 100%;
   }
 
   .profile-pic {
