--- a/style.css
+++ b/style.css
@@ -950,11 +950,11 @@ footer {
 
   }
 
-    .hero-btn {
+    /* .hero-btn {
     font-size: 0.9rem;
-    margin-top: 0.1rem;    /* Adds space around the button */
+    margin-top: 0.1rem;    
     margin-bottom: 3rem;
-  }
+  } */
 
   .card {
     padding: 1rem;
