--- a/style.css
+++ b/style.css
@@ -953,8 +953,8 @@ footer {
 
 .hero-btn {
     font-size: 0.9rem;
-    padding: 0.4rem 0.9rem;
-    max-width: 40%;
+    padding: 0.6rem 0.9rem;
+    max-width: 100px;
   }
 
   
