--- a/style.css
+++ b/style.css
@@ -948,7 +948,39 @@ footer {
 
 @media (max-width: 375px) {
 
+.resume-button
+{
+    font-size: 1.4rem;
+    padding: 1.1rem 1.5rem;
+    margin-top: 50px;
+    margin-bottom: 70px;
+  }
 
+  .hero {
+    min-height: 90vh; /* Adjusted for smaller screens */
+    padding: 3rem 0;
+    padding-top: 5.5rem; /* Adjust for navbar */
+  }
+  
+  .container {
+    width: 100%;
+    padding: 0 0.5rem;
+    margin: 1rem auto;
+  }
+
+  .about-text, .contact-info, .grid, .skill-list, .social-icons {
+    max-width: 100%; /* Adjust for smaller screens */
+  }
+
+  .hero-btn {
+    position: static;
+    margin-bottom: -520px ;
+    font-size: 1.1rem;
+    padding: 0.7rem 1.4rem;
+    width: 100%; /* Optional: Make it span full width on smaller devices */
+    max-width: 200px;
+    display: block;
+}
     .hero-title {
     font-size: 1.7rem;
     margin-top: 290px;
