--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@ html {
   flex-direction: column;
   align-items: center; /* Center content horizontally */
   padding: 6rem 0; /* Existing padding */
+  gap:0;
 }
 
 .section.animate {
@@ -970,7 +971,7 @@ footer {
   }
   
   .container {
-    width: 100%;
+    max-width: 100%;
     padding: 0 0.5rem;
     margin: 1rem auto;
   }
@@ -1034,10 +1035,6 @@ footer {
     font-size: 0.9rem;
     margin-bottom: 2rem;
   }
-  .container
-  {
-    max-width: 100%;
-  }
 
   .card h3 {
     font-size: 1.5rem; 
@@ -1047,7 +1044,7 @@ footer {
   height: 1100px;
   font-size: 1.2rem;
   width: 100%;
-  max-width: 600px;
+  max-width: 100%;
   }
 
     .hero {
@@ -1071,6 +1068,11 @@ footer {
 
 @media (max-width: 412px) {
 
+  .resume-button
+{
+    font-size: 1.9rem;
+    padding: 1.9rem 1.5rem;
+  }
 
   .navbar {
   position: fixed;
