--- a/style.css
+++ b/style.css
@@ -1031,12 +1031,6 @@ footer {
     font-size: 1.5rem; 
 }
 
-.about-text {
-  height: 1100px;
-  font-size: 1.2rem;
-  width: 100%;
-  max-width: 100%;
-  }
 
     .hero {
     min-height: 100vh; /* ✅ Full screen height */
@@ -1136,7 +1130,7 @@ footer {
   {
   width: 100%;
   max-width: 600px;
-  height: 2350px;
+  height: 100%;
     }
   
 }
