--- a/style.css
+++ b/style.css
@@ -1055,7 +1055,7 @@ footer {
 
   .resume-button
 {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     padding: 1.1rem 1.6rem;
   }
 
@@ -1130,7 +1130,7 @@ footer {
   {
   width: 100%;
   max-width: 600px;
-  height: 100%;
+  height: 2500px;
     }
   
 }
