--- a/style.css
+++ b/style.css
@@ -1129,9 +1129,9 @@ footer {
   .about-text
   {
   width: 100%;
-  max-width: 600px;
-  margin-bottom: 2000px;}
-  
+  max-width: 900px;
+  height:100%;
+}
 }
 
 @media (max-width: 853px) {
