--- a/style.css
+++ b/style.css
@@ -1048,6 +1048,10 @@ footer {
     font-size: 14px !important;
   }
 
+  .about-text {
+    font-size: 0.9rem;
+  }
+
 }
 
 
@@ -1132,7 +1136,7 @@ footer {
   max-width: 900px;
   height:100%;
   margin-bottom: 30px;
-  font-size: 12px;
+  font-size: 0.7rem;
 }
 }
 
