--- a/style.css
+++ b/style.css
@@ -972,13 +972,10 @@ footer {
   }
 
   .hero-btn {
-    position: static;
-    margin-bottom: -520px ;
-    font-size: 1.1rem;
-    padding: 0.7rem 1.4rem;
-    width: 100%; /* Optional: Make it span full width on smaller devices */
-    max-width: 200px;
-    display: block;
+    font-size: 1.8rem;
+    font-weight:bolder;
+    padding: 1rem 3rem;
+    max-width:fit-content;
 }
     .hero-title {
     font-size: 1.7rem;
@@ -989,13 +986,6 @@ footer {
     font-size: 1rem;
     margin-bottom: -140px;
 
-  }
-
-
-.hero-btn {
-    font-size: 1.8rem;
-    padding: 1rem 1.9rem;
-    max-width:fit-content;
   }
 
   
@@ -1110,9 +1100,6 @@ footer {
 
   .hero-btn {
     margin-bottom: 3rem;
-    font-size: 1.8rem;
-    padding: 4rem 1.9rem;
-    max-width:fit-content;
   }
   
 
