--- a/style.css
+++ b/style.css
@@ -967,7 +967,7 @@ footer {
     margin: 1rem auto;
   }
 
-  .contact-info, .grid, .social-icons {
+  .contact-info, .social-icons {
     max-width: 100%; /* Adjust for smaller screens */
   }
 
@@ -1018,9 +1018,23 @@ footer {
   }
 
   .card h3 {
-    font-size: 1.5rem; 
+    font-size: 1.4rem; 
 }
 
+.card h4
+{
+    font-size: 1.1rem;
+}
+
+.card p
+{
+    font-size: 0.8rem;
+}
+
+.card li
+{
+    font-size: 0.8rem;
+}
 
     .hero {
     min-height: 100vh; /* ✅ Full screen height */
@@ -1117,7 +1131,6 @@ footer {
 
   .card-content {
     max-height: 6rem; /* Adjust for smaller screens */
-
   }
 
   .about-text
