--- a/style.css
+++ b/style.css
@@ -996,10 +996,10 @@ pre, code {
   }
 
   .hero-subtitle {
-    font-size: 1.8rem;
+    font-size: 1.9rem;
     margin-bottom: 40px;
     margin-top: 20px;
-  
+    width: 100%;
   }
 
   
