--- a/style.css
+++ b/style.css
@@ -1279,33 +1279,33 @@ footer {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 770px) {
    .navbar a 
   { 
-    font-size: 1.6rem; 
+    font-size: 1.4rem; 
   }
   .navbar ul { gap: 3.7rem; flex-wrap: wrap;  flex-direction: grid;}
 
   .profile-pic
   {
-    width: 380px; 
-    height: 470px; 
+    width: 240px; 
+    height: 290px; 
     margin-top: -3rem;
   }
 .hero-title 
   {
-     font-size: 4rem; 
+     font-size: 3rem !important; 
   }
   
     
   .hero-subtitle 
   {
-     font-size: 3rem; 
+     font-size: 2rem; 
   }
   
   .hero-btn {
-    font-size: 2.6rem;
-    margin-top: 3.5rem;
+    font-size: 1.5rem;
+    margin-top: 1rem;
     padding: 0.7rem 1.9rem;
     width: 100%; /* Optional: Make it span full width on smaller devices */
     max-width:fit-content;
@@ -1313,20 +1313,20 @@ footer {
   
   .about-text
   {
-    font-size: 2rem;
+    font-size: 1.3rem;
     margin-bottom: 10rem;
     max-width:980px;
   }
   .resume-button
   {
-    font-size: 2.9rem;
+    font-size: 2.3rem;
     padding: 1.3rem 1.9rem;
     border-radius: 24px;
   }
 
   .skill-list
   {
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     margin-bottom: 10rem;
   }
 
@@ -1976,141 +1976,6 @@ h2
 }
 
 
-@media (max-width: 375px) {
-
-  .navbar a 
-  { 
-    font-size: 0.9rem; 
-  }
-  .navbar ul { gap: 1.3rem; flex-wrap: wrap;  flex-direction: grid;}
-
-.profile-pic
-  {
-    width: 280px; 
-    height: 340px; 
-    margin-top:1rem ;
-  }
-
-  .hero-title
-  {
-    margin-top: -1rem;
-     font-size: 2.3rem; 
-  }
-
-  .hero-subtitle 
-  {
-     font-size: 1.4rem;
-     margin-top: 0.5rem; 
-  }
-
-.skill-list
-{
-    display: flex;
-    justify-content: center; /* Center the skills */
-    font-size: 0.9rem;
-}
-  
-  .container {
-    max-width: 100%;
-    padding: 0 0.5rem;
-    margin: 1rem auto;
-  }
-
-  .contact-info, .social-icons {
-    max-width: 100%; /* Adjust for smaller screens */
-  }
-
-  .hero-btn {
-    font-size: 1.5rem;
-    font-weight:bolder;
-    padding: 0.4rem 1.7rem;
-    max-width:fit-content;
-}
-  
-  .card {
-    padding: 1rem ;
-    width: 100%;
-
-  }
-
-  .card-content {
-    max-height: 6rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    gap: 1rem;
-    width: 95%;
-  }
-
-  .section
-  {
-    max-width: 100%;
-    padding: 6rem 0; /* Ensure padding is consistent */
-  }
-  .social-icons a {
-    font-size: 0.9rem;
-
-  }
-
-  h2 {
-    font-size: 2.2rem;
-  }
-
-  .contact-info
-  {
-    font-size: 1rem;
-    margin-bottom: 10rem;
-  }
-
-  .card h3 {
-    font-size: 1.8rem; 
-}
-
-.card h4
-{
-    font-size: 1.4rem;
-}
-
-.card p
-{
-    font-size: 1rem;
-}
-
-.card li
-{
-    font-size: 1rem;
-}
-
-
-
-  #backToTop {
-    bottom: 1.5rem; /* Adjusted for smaller screens */
-    right: 1.5rem; /* Adjusted for smaller screens */
-    font-size: 1.2rem; /* Larger font size for better visibility */
-    padding: 0.8rem 1rem; /* Increased padding for larger button */
-  }
-  
-
-   .f1 {
-    font-size: 14px !important;
-    padding-top: 2rem;
-    padding-bottom: 1rem;
-  }
-
-  .f2 {
-    font-size: 13px !important;
-    padding-bottom: 2rem;
-  }
-
-    .section
-  {
-    max-width: 95%;
-    padding: 6rem 0; /* Ensure padding is consistent */
-  }
-
-}
-
 
 @media (max-width: 360px) {
   
@@ -2360,6 +2225,142 @@ h2
   }
   
   .section
+  {
+    max-width: 95%;
+    padding: 6rem 0; /* Ensure padding is consistent */
+  }
+
+}
+
+
+@media (max-width: 375px) {
+
+  .navbar a 
+  { 
+    font-size: 0.9rem; 
+  }
+  .navbar ul { gap: 1.3rem; flex-wrap: wrap;  flex-direction: grid;}
+
+.profile-pic
+  {
+    width: 280px; 
+    height: 340px; 
+    margin-top:1rem ;
+  }
+
+  .hero-title
+  {
+    margin-top: -1rem;
+     font-size: 2.3rem; 
+  }
+
+  .hero-subtitle 
+  {
+     font-size: 1.4rem;
+     margin-top: 0.5rem; 
+  }
+
+.skill-list
+{
+    display: flex;
+    justify-content: center; /* Center the skills */
+    font-size: 0.9rem;
+}
+  
+  .container {
+    max-width: 100%;
+    padding: 0 0.5rem;
+    margin: 1rem auto;
+  }
+
+  .contact-info, .social-icons {
+    max-width: 100%; /* Adjust for smaller screens */
+  }
+
+  .hero-btn {
+    font-size: 1.5rem;
+    font-weight:bolder;
+    padding: 0.4rem 1.7rem;
+    max-width:fit-content;
+}
+  
+  .card {
+    padding: 1rem ;
+    width: 100%;
+
+  }
+
+  .card-content {
+    max-height: 6rem;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    width: 95%;
+  }
+
+  .section
+  {
+    max-width: 100%;
+    padding: 6rem 0; /* Ensure padding is consistent */
+  }
+  .social-icons a {
+    font-size: 0.9rem;
+
+  }
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  .contact-info
+  {
+    font-size: 1rem;
+    margin-bottom: 10rem;
+  }
+
+  .card h3 {
+    font-size: 1.8rem; 
+}
+
+.card h4
+{
+    font-size: 1.4rem;
+}
+
+.card p
+{
+    font-size: 1rem;
+}
+
+.card li
+{
+    font-size: 1rem;
+}
+
+
+
+  #backToTop {
+    bottom: 1.5rem; /* Adjusted for smaller screens */
+    right: 1.5rem; /* Adjusted for smaller screens */
+    font-size: 1.2rem; /* Larger font size for better visibility */
+    padding: 0.8rem 1rem; /* Increased padding for larger button */
+  }
+  
+
+   .f1 {
+    font-size: 14px !important;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+  }
+
+  .f2 {
+    font-size: 13px !important;
+    padding-bottom: 2rem;
+  }
+
+    .section
   {
     max-width: 95%;
     padding: 6rem 0; /* Ensure padding is consistent */
